--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql2": "^3.9.4",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.9.5",
+    "path": "^0.12.7",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
