--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-hook-form": "^7.51.4",
+    "react-router-dom": "^6.23.0",
+    "styled-components": "^6.1.10"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
@@ -22,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
